commit: commit lore interfaz cocina 2

--- a/src/main/java/ejemploPersistencia/vistas/interfazCocinero.form
+++ b/src/main/java/ejemploPersistencia/vistas/interfazCocinero.form
@@ -47,22 +47,22 @@
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" attributes="0">
                           <EmptySpace max="32767" attributes="0"/>
-                          <Component id="buttonCerrarPrograma4" min="-2" max="-2" attributes="0"/>
+                          <Component id="buttonElegirPedido" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
                           <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jScrollPane2" min="-2" pref="490" max="-2" attributes="0"/>
+                                      <Component id="scrollTablaPedido" min="-2" pref="490" max="-2" attributes="0"/>
                                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="buttonCerrarPrograma2" min="-2" max="-2" attributes="0"/>
+                                  <Component id="buttonCancelarPedido" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="buttonCerrarPrograma3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="buttonEntregarPedido" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -92,16 +92,16 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jScrollPane1" min="-2" pref="215" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                          <Component id="buttonCerrarPrograma4" min="-2" max="-2" attributes="0"/>
+                          <Component id="buttonElegirPedido" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jScrollPane2" min="-2" pref="222" max="-2" attributes="0"/>
+                          <Component id="scrollTablaPedido" min="-2" pref="222" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="buttonCerrarPrograma2" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="buttonCerrarPrograma3" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="buttonCancelarPedido" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="buttonEntregarPedido" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Component id="jSeparator1" alignment="1" min="-2" pref="278" max="-2" attributes="0"/>
@@ -124,14 +124,14 @@
             <Property name="text" type="java.lang.String" value="Pedido N&#xba; :"/>
           </Properties>
         </Component>
-        <Container class="javax.swing.JScrollPane" name="jScrollPane2">
+        <Container class="javax.swing.JScrollPane" name="scrollTablaPedido">
           <AuxValues>
             <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
           </AuxValues>
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="jTable1">
+            <Component class="javax.swing.JTable" name="tablePedidoDesglose">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="f1" green="f9" red="ff" type="rgb"/>
@@ -194,7 +194,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JList" name="jList1">
+            <Component class="javax.swing.JList" name="listPedidos">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="f1" green="f9" red="ff" type="rgb"/>
@@ -267,9 +267,9 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="buttonCerrarPrograma1" min="-2" pref="128" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="buttonCerrarPrograma" min="-2" pref="128" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="buttonSalirSesion" min="-2" pref="128" max="-2" attributes="0"/>
                       <EmptySpace pref="566" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -279,8 +279,8 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="buttonCerrarPrograma1" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="buttonCerrarPrograma" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="buttonSalirSesion" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
@@ -288,7 +288,7 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JButton" name="buttonCerrarPrograma">
+            <Component class="javax.swing.JButton" name="buttonSalirSesion">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="3a" green="a5" red="fd" type="rgb"/>
@@ -307,10 +307,10 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonCerrarProgramaActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonSalirSesionActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="buttonCerrarPrograma1">
+            <Component class="javax.swing.JButton" name="buttonCerrarPrograma">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="3a" green="a5" red="fd" type="rgb"/>
@@ -329,12 +329,12 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonCerrarPrograma1ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonCerrarProgramaActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="buttonCerrarPrograma2">
+        <Component class="javax.swing.JButton" name="buttonCancelarPedido">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="3a" green="a5" red="fd" type="rgb"/>
@@ -353,7 +353,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="buttonCerrarPrograma3">
+        <Component class="javax.swing.JButton" name="buttonEntregarPedido">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="3a" green="a5" red="fd" type="rgb"/>
@@ -372,7 +372,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="buttonCerrarPrograma4">
+        <Component class="javax.swing.JButton" name="buttonElegirPedido">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="3a" green="a5" red="fd" type="rgb"/>
