--- a/src/main/java/ejemploPersistencia/vistas/interfazCocinero.form
+++ b/src/main/java/ejemploPersistencia/vistas/interfazCocinero.form
@@ -143,7 +143,7 @@
                   <Color blue="0" green="6" red="e" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="3" rowCount="5">
+                  <Table columnCount="3" rowCount="0">
                     <Column editable="true" title="Snack" type="java.lang.String"/>
                     <Column editable="true" title="Preparando" type="java.lang.Boolean"/>
                     <Column editable="true" title="Emplatado" type="java.lang.Boolean"/>
@@ -206,13 +206,7 @@
                   <Color blue="0" green="6" red="e" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-                  <StringArray count="5">
-                    <StringItem index="0" value="Item 1"/>
-                    <StringItem index="1" value="Item 2"/>
-                    <StringItem index="2" value="Item 3"/>
-                    <StringItem index="3" value="Item 4"/>
-                    <StringItem index="4" value="Item 5"/>
-                  </StringArray>
+                  <StringArray count="0"/>
                 </Property>
                 <Property name="selectionBackground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="f9" green="fe" red="fe" type="rgb"/>
